[package]
name = "tinytorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
sha-1 = "0.9"
structopt = "0.3"
reqwest = { version = "0.11", features = ['blocking'] }
rand = "0.8"
